02. js-portfolio-119-hover. UI.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
+    <title>Project | Hover</title>
 </head>
 
 <body>
-    start
+    <div class="container">
+        <div class="header">
+            <h1>The Newsroom</h1>
+        </div>
 
+        <div class="row">
+            <div class="img">
+                <img src="./assets/images/img-1.png" alt="photo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img">
+                <img src="./assets/images/img-2.jpg" alt="photo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img">
+                <img src="./assets/images/img-3.jpg" alt="photo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img">
+                <img src="./assets/images/img-4.jpg" alt="photo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img">
+                <img src="./assets/images/img-5.jpg" alt="photo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img">
+                <img src="./assets/images/img-6.jpg" alt="photo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img">
+                <img src="./assets/images/img-7.jpg" alt="photo">
+            </div>
+        </div>
+    </div>
+
+    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
