--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="./main.js" type="module"></script>
 </body>
 
 </html>
